syntax = "proto3";

option csharp_namespace = "Rozetka.PriceTracker.Grpc";

import "google/protobuf/empty.proto";

package priceTracker;

message TrackProductRequest{
	string productUrl = 1;
}

message TrackProcutPricesRequest{
	repeated int32 productIds = 1;
}

message TrackProductPriceResponse{
	repeated TrackProductResponse products = 1;
}

message TrackProductResponse{
	int32 id = 1;
	float price = 2;
	string imageUrl = 3;
	string title = 4;
	string description = 5;
	string url = 6;
	float discount = 7;
	string status = 8;
	string sell_status = 9;
}

service PriceTracker{
	rpc TrackProduct (TrackProductRequest) returns (TrackProductResponse);
	rpc TrackPrices (google.protobuf.Empty) returns (TrackProductPriceResponse);
	rpc TrackProductStream(TrackProductRequest) returns (stream TrackProductResponse);
}